--- a/src/components/css/login.css
+++ b/src/components/css/login.css
@@ -1,11 +1,134 @@
-/* Global Style */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-.SignUp-text {
-    color: #3E3E3E;
-    font-weight: 600; /* Semi Bold */
-}
+.sign-up {
+    position: relative;
+    font-size: 18px;
+    font-weight: 600;
+    font-family: var(--font-inter);
+    color: var(--color-white);
+    text-align: left;
+  }
+
+  .sign-up-btn {
+    cursor: pointer;
+    border: 0;
+    padding: var(--padding-3xs);
+    background-color: #ee5684;
+    position: absolute;
+    top: 563.5px;
+    left: 76px;
+    border-radius: var(--br-mini);
+    width: 487px;
+    height: 67px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    box-sizing: border-box;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .password {
+    position: relative;
+    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: -0.02em;
+    font-family: var(--font-inter);
+    color: var(--color-darkslategray-200);
+    text-align: left;
+  }
+
+  .password-input-field {
+    border: 0;
+    background-color: transparent;
+    position: relative;
+  }
+
+  .password-field {
+    position: absolute;
+    top: 429.5px;
+    left: 76px;
+    width: 488px;
+    height: 102px;
+    display: flex;
+    flex-direction: column;
+    padding: 0 0 0 var(--padding-12xs);
+    box-sizing: border-box;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 5px;
+  }
+
+  .email-title {
+    position: relative;
+    font-size: 20px;
+    font-weight: 600;
+    font-family: var(--font-inter);
+    color: var(--color-darkslategray-200);
+    text-align: left;
+  }
+
+  .email-field,
+  .sign-up1 {
+    position: absolute;
+    left: 80px;
+  }
+
+  .email-field {
+    top: 280.5px;
+    width: 488px;
+    height: 106px;
+    display: flex;
+    flex-direction: column;
+    padding: 0 0 0 var(--padding-12xs);
+    box-sizing: border-box;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 9px;
+  }
+
+  .sign-up1 {
+    top: 209.5px;
+    font-size: 32px;
+    letter-spacing: -0.07em;
+    font-weight: 600;
+    font-family: var(--font-inter);
+    color: var(--color-darkslategray-200);
+    text-align: left;
+  }
+
+  .sign-up-form,
+  .sign-up-page {
+    position: relative;
+    overflow: hidden;
+  }
+
+  .sign-up-form {
+    border-radius: var(--br-xl);
+    background-color: var(--color-white);
+    width: 640px;
+    height: 823px;
+    flex-shrink: 0;
+  }
+
+  .sign-up-page {
+    background-color: var(--color-steelblue);
+    width: 100%;
+    height: 1080px;
+    display: flex;
+    flex-direction: row;
+    padding: var(--padding-109xl) 0;
+    box-sizing: border-box;
+    align-items: center;
+    justify-content: center;
+  }
+
+  @media screen and (max-width: 1200px) {
+    .sign-up-btn {
+      cursor: pointer;
+    }
+  }  
